# math-problems

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
scripts/: multiplication_table.py
src/math_problems/: addition.py  cli.py  counting_squares.py  division.py  grocery_list.py  module.py  multiplication.py  problems.py  renderer.py  subtraction.py
tests/: test_addition.py  test_counting_squares.py  test_division.py  test_grocery_list.py  test_multiplication.py  test_problems.py  test_renderer.py  test_subtraction.py
