[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "math-problems"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "typst",
]

[project.scripts]
math-problems = "math_problems.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/math_problems"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
